--- a/questions.css
+++ b/questions.css
@@ -64,11 +64,13 @@ body {
     padding-bottom: 50px;
 }
 
-
-
-
+.footer {
+    border: 15px solid cornflowerblue;
+    background-color: cornflowerblue;
+}
 
 .powered-by {
+    color: black;
     text-align: center;
 }
 
