--- a/merchant-map.css
+++ b/merchant-map.css
@@ -13,6 +13,7 @@ body {
 .nav {
     padding-left: 50px;
     padding-top: 50px;
+    border-bottom: 5px double cornflowerblue;
 }
 
 .navbar-brand {
