--- a/dashboard.css
+++ b/dashboard.css
@@ -25,6 +25,26 @@ body {
     background-color: cornflowerblue;
 }
 
+/*
+.active {
+    border: 5px solid cornflowerblue;
+    background-color: cornflowerblue;
+    color: skyblue;
+    cursor: default;
+}
+*/
+
+#validate {
+    float: right;
+    position: absolute;
+    right: 50px;
+    top: 45px;
+}
+
+#link {
+    color: black;
+}
+
 .footer {
     border: 15px solid cornflowerblue;
     background-color: cornflowerblue;
