--- a/questions.css
+++ b/questions.css
@@ -25,7 +25,16 @@ body {
   background-color: cornflowerblue;
 }
 
+#validate {
+    float: right;
+    position: absolute;
+    right: 50px;
+    top: 45px;
+}
 
+#link {
+    color: black;
+}
 
 .contact-page {
     margin-left: 100px;
