--- a/wishlist.css
+++ b/wishlist.css
@@ -25,9 +25,20 @@ body {
   background-color: cornflowerblue;
 }
 
+#validate {
+    float: right;
+    position: absolute;
+    right: 50px;
+    top: 45px;
+}
+
 .footer {
     border: 15px solid cornflowerblue;
     background-color: cornflowerblue;
+}
+
+#link {
+    color: black;
 }
 
 
