--- a/dashboard.css
+++ b/dashboard.css
@@ -59,6 +59,11 @@ body {
 }
 
 
+/*GRAPH*/
+
+/*GRAPH*/
+
+
 .footer {
     border: 15px solid cornflowerblue;
     background-color: cornflowerblue;
