--- a/wishlist.css
+++ b/wishlist.css
@@ -5,8 +5,8 @@ body {
 #header {
     text-align: center;
     font-family: "Courier New";
-    border: 25px solid skyblue;
-    background-color: skyblue;
+    border: 25px solid lightcoral;
+    background-color: lightcoral;
     letter-spacing: 4px;
 }
 
@@ -33,8 +33,8 @@ body {
 }
 
 .footer {
-    border: 15px solid cornflowerblue;
-    background-color: cornflowerblue;
+    border: 15px solid palevioletred;
+    background-color: palevioletred;
 }
 
 #link {
