--- a/merchant-map.css
+++ b/merchant-map.css
@@ -5,8 +5,8 @@ body {
 #header {
     text-align: center;
     font-family: "Courier New";
-    border: 25px solid skyblue;
-    background-color: skyblue;
+    border: 25px solid lightcoral;
+    background-color: lightcoral;
     letter-spacing: 4px;
 }
 
@@ -40,14 +40,14 @@ body {
 #header2 {
     font-family: "Courier New";
     text-align: center;
-    color: cornflowerblue;
-    border: 25px solid wheat;
-    background-color: wheat;
+    color: black;
+    border: 25px solid thistle;
+    background-color: thistle;
 }
 
 .footer {
-    border: 15px solid cornflowerblue;
-    background-color: cornflowerblue;
+    border: 15px solid palevioletred;
+    background-color: palevioletred;
 }
 
 .powered-by {
