--- a/questions.css
+++ b/questions.css
@@ -5,8 +5,8 @@ body {
 #header {
     text-align: center;
     font-family: "Courier New";
-    border: 25px solid skyblue;
-    background-color: skyblue;
+    border: 25px solid lightcoral;
+    background-color: lightcoral;
     letter-spacing: 4px;
 }
 
@@ -45,12 +45,13 @@ body {
 }
 
 .row {
-    border: 3px double goldenrod;
+/*    border: 3px double goldenrod;*/
     padding-top: 20px;
 }
 
 .column2 {
-/*    border: 3px double goldenrod;*/
+/*    border: 3px double blue;*/
+/*    border-radius: 50%;*/
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -87,8 +88,8 @@ body {
 }
 
 .footer {
-    border: 15px solid cornflowerblue;
-    background-color: cornflowerblue;
+    border: 15px solid palevioletred;
+    background-color: palevioletred;
 }
 
 .powered-by {
