--- a/dashboard.css
+++ b/dashboard.css
@@ -39,11 +39,13 @@ body {
     float: right;
     position: absolute;
     right: 50px;
-    top: 45px;
+    top: 25px;
 }
 
 #link {
     color: black;
+    position: relative;
+    bottom: 1px;
 }
 
 
