--- a/merchant-map.css
+++ b/merchant-map.css
@@ -1,5 +1,6 @@
 body {
     background-color: whitesmoke;
+    position: relative;
 }
 
 #header {
@@ -29,15 +30,27 @@ body {
     float: right;
     position: absolute;
     right: 50px;
-    top: 45px;
+    top: 25px;
 }
 
 #link {
     color: black;
+    position: relative;
+    bottom: 1px;
 }
 
+#coinmap {
+    height: 400px;
+    width: 100%;
+}
 
-#header2 {
+#map {
+    height: 400px;
+    width: 100%;
+    position: absolute;
+}
+
+.header2 {
     font-family: "Courier New";
     text-align: center;
     color: black;
