--- a/dashboard.css
+++ b/dashboard.css
@@ -1,14 +1,18 @@
 body {
-    background-color: whitesmoke;
+/*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
+    background-color: thistle;
     position: relative;
 }
 
 #header {
     text-align: center;
     font-family: "Courier New";
+/*
     border: 25px solid lightcoral;
     background-color: lightcoral;
+*/
     letter-spacing: 4px;
+    padding-top: 25px;
 }
 
 .nav {
@@ -85,8 +89,8 @@ body {
 
 
 .footer {
-    border: 15px solid palevioletred;
-    background-color: palevioletred;
+/*    border: 15px solid palevioletred;*/
+/*    background-color: palevioletred;*/
     
 }
 
