--- a/wishlist.css
+++ b/wishlist.css
@@ -1,13 +1,16 @@
 body {
-    background-color: whitesmoke;
+    background-color: thistle;
 }
 
 #header {
     text-align: center;
     font-family: "Courier New";
+/*
     border: 25px solid lightcoral;
     background-color: lightcoral;
+*/
     letter-spacing: 4px;
+    padding-top: 25px;
 }
 
 .nav {
@@ -33,8 +36,8 @@ body {
 }
 
 .footer {
-    border: 15px solid palevioletred;
-    background-color: palevioletred;
+/*    border: 15px solid palevioletred;*/
+/*    background-color: palevioletred;*/
 }
 
 #link {
@@ -54,8 +57,13 @@ body {
     width: 300px;
     margin: 0 auto;
     margin-top: 40px;
-    background: white;
+    background: plum;
     border-radius: 5px;
+}
+
+.wish {
+    border: 20px solid plum;
+    background-color: plum;
 }
 
 form {
