--- a/dashboard.css
+++ b/dashboard.css
@@ -1,6 +1,7 @@
 body {
 /*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
-    background-color: thistle;
+/*    background-color: thistle;*/
+    background-color: skyblue;
     position: relative;
 }
 
