--- a/dashboard.css
+++ b/dashboard.css
@@ -1,7 +1,7 @@
 body {
 /*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
 /*    background-color: thistle;*/
-    background-color: skyblue;
+    background-color: lightsteelblue;
     position: relative;
 }
 
