--- a/dashboard.css
+++ b/dashboard.css
@@ -1,9 +1,15 @@
 body {
 /*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
 /*    background-color: thistle;*/
-    background-color: lightsteelblue;
+    background-color: tan;
     position: relative;
 }
+
+
+/*possible header*/
+
+
+
 
 #header {
     text-align: center;
@@ -19,7 +25,7 @@ body {
 .nav {
     padding-left: 50px;
     padding-top: 50px;
-    border-bottom: 5px double cornflowerblue;
+    border-bottom: 5px double firebrick;
 }
 
 .navbar-brand {
@@ -27,14 +33,14 @@ body {
 }
 
 .navbar-brand:hover {
-    border: 5px solid cornflowerblue;
-    background-color: cornflowerblue;
+    border: 5px solid firebrick;
+    background-color: firebrick;
 }
 
 /*
 .active {
-    border: 5px solid cornflowerblue;
-    background-color: cornflowerblue;
+    border: 5px solid black;
+    background-color: black;
     color: skyblue;
     cursor: default;
 }
