--- a/dashboard.css
+++ b/dashboard.css
@@ -1,31 +1,15 @@
 body {
 /*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
 /*    background-color: thistle;*/
-    background-color: tan;
+    background-color: #9cb8b3;
+    padding: 20px 60px;
     position: relative;
 }
 
-
-/*possible header*/
-
-
-
-
-#header {
-    text-align: center;
-    font-family: "Courier New";
-/*
-    border: 25px solid lightcoral;
-    background-color: lightcoral;
-*/
-    letter-spacing: 4px;
-    padding-top: 25px;
-}
-
 .nav {
-    padding-left: 50px;
+/*    padding-left: 10px;*/
     padding-top: 50px;
-    border-bottom: 5px double firebrick;
+    border-bottom: 5px double royalblue;
 }
 
 .navbar-brand {
@@ -33,8 +17,8 @@ body {
 }
 
 .navbar-brand:hover {
-    border: 5px solid firebrick;
-    background-color: firebrick;
+    border: 5px solid cornflowerblue;
+    background-color: cornflowerblue;
 }
 
 /*
@@ -46,11 +30,25 @@ body {
 }
 */
 
+
+#header {
+    text-align: center;
+    text-shadow: 2px 2px grey;
+/*    font-size: 30px;*/
+    font-family: "Courier New";
+/*
+    border: 25px solid lightcoral;
+    background-color: lightcoral;
+*/
+    letter-spacing: 4px;
+    padding-top: 25px;
+}
+
 #validate {
     float: right;
     position: absolute;
     right: 50px;
-    top: 25px;
+    top: 70px;
 }
 
 #link {
@@ -59,21 +57,20 @@ body {
     bottom: 1px;
 }
 
-
 #exchange {
-    padding-left: 130px;
+    padding-left: 30px;
     font-family: "Courier New";
     font-weight: bold;
     padding-top: 25px;
 }
 
 #buyPrice {
-    padding-left: 130px;
+    padding-left: 30px;
     font-family: "Courier New";
 }
 
 #sellPrice {
-    padding-left: 130px;
+    padding-left: 30px;
     font-family: "Courier New";
 /*    padding-bottom: 5px;*/
 }
@@ -82,7 +79,7 @@ body {
 /*    border-top: 8px double mediumpurple;*/
     height: 60%;
     width: 60%;
-    padding-left: 120px;
+    padding-left: 20px;
     padding-top: 50px;
 }
 
@@ -90,8 +87,8 @@ body {
 .twitter {
     position: absolute;
     text-align: right;
-    bottom: 75px;
-    right: 35px;
+    bottom: 125px;
+    right: 65px;
 }
 
 
