--- a/questions.css
+++ b/questions.css
@@ -1,11 +1,13 @@
 body {
 /*    background-color: thistle; also was lightsteelblue*/
-    background-color: tan;
+    background: #9cb8b3; 
+    padding: 20px 60px;
 }
 
 #header {
     text-align: center;
     font-family: "Courier New";
+    text-shadow: 2px 2px grey;
 /*
     border: 25px solid lightcoral;
     background-color: lightcoral;
@@ -15,9 +17,9 @@ body {
 }
 
 .nav {
-    padding-left: 50px;
+/*    padding-left: 50px;*/
     padding-top: 50px;
-    border-bottom: 5px double firebrick;
+    border-bottom: 5px double royalblue;
 }
 
 .navbar-brand {
@@ -25,15 +27,15 @@ body {
 }
 
 .navbar-brand:hover {
-  border: 5px solid firebrick;
-  background-color: firebrick;
+  border: 5px solid cornflowerblue;
+  background-color: cornflowerblue;
 }
 
 #validate {
     float: right;
     position: absolute;
     right: 50px;
-    top: 45px;
+    top: 70px;
 }
 
 #link {
