--- a/dashboard.css
+++ b/dashboard.css
@@ -1,7 +1,7 @@
 body {
 /*    background: linear-gradient(to bottom right, mediumpurple,  mediumaquamarine);*/
 /*    background-color: thistle;*/
-    background-color: #9cb8b3;
+    background-color: #DFDCE3;
     padding: 20px 60px;
     position: relative;
 }
@@ -33,13 +33,11 @@ body {
 
 #header {
     text-align: center;
-    text-shadow: 2px 2px grey;
+/*    text-shadow: 2px 2px hotpink;*/
 /*    font-size: 30px;*/
-    font-family: "Courier New";
-/*
+    font-family: "Palatino";
     border: 25px solid lightcoral;
     background-color: lightcoral;
-*/
     letter-spacing: 4px;
     padding-top: 25px;
 }
@@ -47,8 +45,9 @@ body {
 #validate {
     float: right;
     position: absolute;
-    right: 50px;
-    top: 70px;
+    right: 80px;
+    top: 92px;
+    background-color: #93C178;
 }
 
 #link {
@@ -59,19 +58,19 @@ body {
 
 #exchange {
     padding-left: 30px;
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
     font-weight: bold;
     padding-top: 25px;
 }
 
 #buyPrice {
     padding-left: 30px;
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
 }
 
 #sellPrice {
     padding-left: 30px;
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
 /*    padding-bottom: 5px;*/
 }
 
