--- a/questions.css
+++ b/questions.css
@@ -1,17 +1,15 @@
 body {
 /*    background-color: thistle; also was lightsteelblue*/
-    background: #9cb8b3; 
+    background: #DFDCE3; 
     padding: 20px 60px;
 }
 
 #header {
     text-align: center;
-    font-family: "Courier New";
-    text-shadow: 2px 2px grey;
-/*
+    font-family: "Palatino";
+/*    text-shadow: 2px 2px grey;*/
     border: 25px solid lightcoral;
     background-color: lightcoral;
-*/
     letter-spacing: 4px;
     padding-top: 25px;
 }
@@ -34,8 +32,9 @@ body {
 #validate {
     float: right;
     position: absolute;
-    right: 50px;
-    top: 70px;
+    right: 80px;
+    top: 92px;
+    background-color: #93C178;
 }
 
 #link {
@@ -53,6 +52,8 @@ body {
 .row {
 /*    border: 3px double goldenrod;*/
     padding-top: 20px;
+    border: 15px solid thistle;
+    background-color: thistle;
 }
 
 .column2 {
@@ -63,12 +64,12 @@ body {
 }
 
 #questions {
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
     padding-bottom: 5px;
 }
 
 .stay-in-touch {
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
 }
 
 #linkedin {
@@ -89,7 +90,7 @@ body {
 }
 
 #phone-text {
-    font-family: "Courier New";
+    font-family: "Trebuchet MS";
     padding-bottom: 50px;
 }
 
