--- a/login.css
+++ b/login.css
@@ -69,15 +69,15 @@ body {
   border-bottom: 3px solid #fff;
 }
 .text1 {
-  color: saddlebrown;
+  color: #96858F;
   font-size: 60px;
 }
 .text2 {
-  color: saddlebrown;
+  color: #96858F;
   font-size: 169px;
 }
 .text3 {
-  color: saddlebrown;
+  color: #96858F;
   font-size: 100px;
 }
 
