--- a/merchant-map.css
+++ b/merchant-map.css
@@ -1,7 +1,7 @@
 body {
 /*    background-color: thistle;*/
     background: #DFDCE3; 
-    padding: 20px 60px;
+    padding: 30px 70px;
     position: relative;
 }
 
@@ -64,8 +64,9 @@ body {
     font-family: "Trebuchet MS";
     text-align: center;
     color: black;
-/*    border: 25px solid mediumslateblue;*/
-/*    background-color: mediumslateblue;*/
+    border: 0.5px solid #D133FF;
+    background-color: rgba(209, 51, 255, 0.5);
+    padding: 20px;
 }
 
 .footer {
