--- a/merchant-map.css
+++ b/merchant-map.css
@@ -1,7 +1,7 @@
 body {
 /*    background-color: thistle;*/
     background: #DFDCE3; 
-    padding: 30px 70px;
+    padding: 20px 60px;
     position: relative;
 }
 
@@ -42,7 +42,7 @@ body {
 #link {
     color: black;
     position: relative;
-    bottom: 1px;
+/*    bottom: 1px;*/
 }
 
 #coinmap {
